--- a/doc/readme/02.Usage.md.hbs
+++ b/doc/readme/02.Usage.md.hbs
@@ -15,3 +15,4 @@ Usage
 | save | boolean | false | Save to package.json |
 | saveDev | boolean | false | Save as dev to package.json |
 | global | boolean | false | Save as global module. |
+| exit | boolean | false | Exit process when done. |
